fix layout issues

--- a/src/styles/modules/_side-navigation.scss
+++ b/src/styles/modules/_side-navigation.scss
@@ -1,6 +1,4 @@
 .mat-sidenav-container {
-  flex-grow: 1;
-
   .mat-drawer {
     background: transparent;
     min-width: 250px;
